k8s/minikube/echo-merger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-merger-deployment
  namespace: processing
  labels:
    app: merger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-merger
  template:
    metadata:
      labels:
        app: echo-merger
    spec:
      containers:
        - name: echo-merger
          image: processing/echo-merger:latest
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /data
              name: data-volume
      volumes:
        - name: data-volume
          hostPath:
            path: /data
#          livenessProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8093
#            initialDelaySeconds: 40
#            periodSeconds: 10
#          readinessProbe:
#            httpGet:
#              path: /actuator/health/readiness
#              port: 8093
#            initialDelaySeconds: 10
#            periodSeconds: 10
