k8s/minikube/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-deployment
  namespace: processing
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
        - name: controller
          image: processing/controller:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: controller-service
  namespace: processing
spec:
  selector:
    app: controller
  ports:
    - protocol: TCP
      port: 8080
  type: LoadBalancer
