k8s/minikube/tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-deployment
  namespace: processing
  labels:
    app: tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker
  template:
    metadata:
      labels:
        app: tracker
    spec:
      containers:
        - name: tracker
          image: processing/tracker:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
  namespace: processing
spec:
  selector:
    app: tracker
  ports:
    - protocol: TCP
      port: 8081
  type: LoadBalancer
